--- a/yac_clipper/.shed.yml
+++ b/yac_clipper/.shed.yml
@@ -1,5 +1,5 @@
 # .shed.yml supporting automatic pushes.
-owner: mvdbeek
+owner: drosofff
 name: yac_clipper
 description: Clips 3' adapters for small RNA sequencing reads.
 long_description: |
