Change dependency to matplotlib_1.2, since 1.4 is not compiling currently. Change owner of mississippi toolsuite to mvdbeek, to not accidentally create a second toolsuite.

--- a/mississippi_toolsuite/.shed.yml
+++ b/mississippi_toolsuite/.shed.yml
@@ -1,5 +1,5 @@
 # .shed.yml supporting automatic pushes.
-owner: drosofff
+owner: mvdbeek
 name: mississippi_toolsuite
 description: Collection of mississippi tools for miRNA, siRNA and piRNA analysis.
 long_description: |
