--- a/generate_sliding_windows/.shed.yml
+++ b/generate_sliding_windows/.shed.yml
@@ -1,5 +1,5 @@
 # .shed.yml supporting automatic pushes.
-owner: drosofff
+owner: mvdbeek
 name: generate_sliding_windows
 description: Generate sliding windows starting from sequence in a fasta file.
 long_description: |
