--- a/Blastx_to_scaffold/.shed.yml
+++ b/Blastx_to_scaffold/.shed.yml
@@ -1,6 +1,6 @@
 # .shed.yml supporting automatic pushes.
 owner: drosofff
-name: Blastx_to_scaffold
+name: blastx_to_scaffold
 description: Generate DNA scaffold from blastx alignment of Contigs
 long_description: |
   This tool start from DNA contigs that aligned to a subject protein sequence through blastx.
