--- a/blastn_to_scaffold/.shed.yml
+++ b/blastn_to_scaffold/.shed.yml
@@ -5,8 +5,9 @@ description: Generate DNA scaffold from blastn alignment of Contigs
 long_description: |
   This tool start from DNA contigs that aligned to a subject DNA sequence through blastn.
   The contigs must be provided in fasta format. The blastn output must be tabular, the 12 standard column plus column 13 with the length of the blastn subject.
-  The final scaffold is a DNA sequence.
-  Sequences of the subject DNA sequence which were not aligned to the contigs are replaced by Ns in this scaffold.
+  The sequence used to blastn the contigs must be provided to serve as a guide to the final assembly
+  The final assembly is a DNA sequence.
+  Nucleotides of the guide sequence which were not covered by contigs are in small letters in the output assembly.
 
 categories:
   - RNA
