Add local toolshed as target in all tools.

--- a/tools/blastn_to_scaffold/.shed.yml
+++ b/tools/blastn_to_scaffold/.shed.yml
@@ -15,3 +15,5 @@ categories:
   - Assembly
 homepage_url: http://drosophile.org/
 remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+toolshed:
+  - https://lbcd41.snv.jussieu.fr/toolshed/
