--- a/tools/mismatch_frequencies/.shed.yml
+++ b/tools/mismatch_frequencies/.shed.yml
@@ -10,3 +10,5 @@ categories:
   - Sequence Analysis
 homepage_url: http://drosophile.org/
 remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+toolshed:
+  - https://lbcd41.snv.jussieu.fr/toolshed/
