--- a/tools/msp_sr_bowtie/.shed.yml
+++ b/tools/msp_sr_bowtie/.shed.yml
@@ -9,3 +9,5 @@ categories:
   - Next Gen Mappers
 homepage_url: http://drosophile.org/
 remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+toolshed:
+  - https://lbcd41.snv.jussieu.fr/toolshed/
