--- a/tools/msp_sr_bowtie_cascade/.shed.yml
+++ b/tools/msp_sr_bowtie_cascade/.shed.yml
@@ -8,3 +8,5 @@ categories:
   - RNA
 homepage_url: http://drosophile.org/
 remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+toolshed:
+  - https://lbcd41.snv.jussieu.fr/toolshed/
