Add local toolshed as target to packages.

--- a/packages/package_patser_v3e/.shed.yml
+++ b/packages/package_patser_v3e/.shed.yml
@@ -27,3 +27,5 @@ categories:
 homepage_url: http://stormo.wustl.edu/resources.html
 remote_repository_url: http://drosophile.org
 type: tool_dependency_definition
+toolshed:
+  - https://lbcd41.snv.jussieu.fr/toolshed/
