Adapt shed.yml for the correct toolsheds.

--- a/tools/patser/.shed.yml
+++ b/tools/patser/.shed.yml
@@ -28,3 +28,4 @@ homepage_url: http://drosophile.org/
 remote_repository_url: http://stormo.wustl.edu/resources.html
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
+  - testtoolshed
