--- a/packages/package_patser_v3e/.shed.yml
+++ b/packages/package_patser_v3e/.shed.yml
@@ -29,3 +29,4 @@ remote_repository_url: http://drosophile.org
 type: tool_dependency_definition
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
+  - testtoolshed
