--- a/tools/msp_blastparser_and_hits/.shed.yml
+++ b/tools/msp_blastparser_and_hits/.shed.yml
@@ -13,3 +13,4 @@ homepage_url: http://drosophile.org/
 remote_repository_url: https://bitbucket.org/drosofff/gedtools/
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
+  - testtoolshed
