--- a/packages/package_image_1_4_1/.shed.yml
+++ b/packages/package_image_1_4_1/.shed.yml
@@ -6,8 +6,9 @@ long_description: |
   https://github.com/francescortiz/images
 name: package_image_1_4_1
 owner: fabiorjvieira
-homepage_url: https://github.com/fabiorjvieira/
-remote_repository_url: https://github.com/fabiorjvieira/tools-artbio/tree/master/packages/package_image_1_4_1
+homepage_url: https://github.com/ARTbio/
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/packages/package_image_1_4_1
 type: tool_dependency_definition
 toolshed:
-  - http://localhost:9009/
+  - https://lbcd41.snv.jussieu.fr/toolshed/
+  - testtoolshed
