--- a/tools/qr_coder/.shed.yml
+++ b/tools/qr_coder/.shed.yml
@@ -9,4 +9,5 @@ categories:
 homepage_url: https://github.com/ARTbio/
 remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/qr_coder
 toolshed:
-  - http://localhost:9009/ 
+  - https://lbcd41.snv.jussieu.fr/toolshed/
+  - testtoolshed
