Add or change homepage_url to http://artbio.fr

--- a/packages/package_ged_velvet/.shed.yml
+++ b/packages/package_ged_velvet/.shed.yml
@@ -6,7 +6,7 @@ long_description: |
   velvet package
 categories:
   - Tool Dependency Packages
-homepage_url: http://drosophile.org/
+homepage_url: http://artbio.fr
 remote_repository_url: https://bitbucket.org/drosofff/gedtools/
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
