--- a/tools/generate_sliding_windows/.shed.yml
+++ b/tools/generate_sliding_windows/.shed.yml
@@ -10,7 +10,7 @@ categories:
   - Fasta Manipulation
   - Proteomics
   - Sequence Analysis
-homepage_url: http://drosophile.org/
+homepage_url: http://artbio.fr
 remote_repository_url: https://bitbucket.org/drosofff/gedtools/
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
