--- a/tools/msp_sr_readmap_and_size_histograms/.shed.yml
+++ b/tools/msp_sr_readmap_and_size_histograms/.shed.yml
@@ -8,7 +8,7 @@ categories:
   - RNA
   - Graphics
   - Visualization
-homepage_url: http://drosophile.org/
+homepage_url: http://artbio.fr
 remote_repository_url: https://bitbucket.org/drosofff/gedtools/
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
