--- a/tools/qr_coder/.shed.yml
+++ b/tools/qr_coder/.shed.yml
@@ -6,7 +6,7 @@ long_description: |
   Generate qr codes images.
 categories:
   - Graphics
-homepage_url: https://github.com/ARTbio/
+homepage_url: http://artbio.fr
 remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/qr_coder
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
