--- a/tools/sra-tools/.shed.yml
+++ b/tools/sra-tools/.shed.yml
@@ -7,7 +7,7 @@ long_description: |
 categories:
   - Data Source
   - Fastq Manipulation
-homepage_url: http://drosophile.org/
+homepage_url: http://artbio.fr
 remote_repository_url: https://bitbucket.org/drosofff/gedtools/
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
