--- a/packages/package_ngs_sdk_1_1_3/.shed.yml
+++ b/packages/package_ngs_sdk_1_1_3/.shed.yml
@@ -6,7 +6,7 @@ long_description: |
   NCBI ngs-sdk package. Required for NCBI sra toolkit package.
 categories:
   - Tool Dependency Packages
-homepage_url: 
+homepage_url: http://artbio.fr
 remote_repository_url: 
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
