--- a/tools/blastn_to_scaffold/.shed.yml
+++ b/tools/blastn_to_scaffold/.shed.yml
@@ -13,7 +13,7 @@ categories:
   - RNA
   - Sequence Analysis
   - Assembly
-homepage_url: http://drosophile.org/
+homepage_url: http://artbio.fr
 remote_repository_url: https://bitbucket.org/drosofff/gedtools/
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
