--- a/tools/deseq_normalization/.shed.yml
+++ b/tools/deseq_normalization/.shed.yml
@@ -6,7 +6,7 @@ long_description: |
   Normalizes gene count lists using DESeq1 normalizeCounts() function.
 categories:
   - RNA
-homepage_url: http://drosophile.org/
+homepage_url: http://artbio.fr
 remote_repository_url: https://bitbucket.org/drosofff/gedtools/
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
