--- a/tools/msp_sr_signature/.shed.yml
+++ b/tools/msp_sr_signature/.shed.yml
@@ -7,7 +7,7 @@ long_description: |
   see C. Antoniewski, “Computing siRNA and piRNA Overlap Signatures.,” Methods Mol. Biol., vol. 1173, no. 12, pp. 135–146, 2014.
 categories:
   - RNA
-homepage_url: http://drosophile.org/
+homepage_url: http://artbio.fr
 remote_repository_url: https://bitbucket.org/drosofff/gedtools/
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
