--- a/tools/generate_sliding_windows/.shed.yml
+++ b/tools/generate_sliding_windows/.shed.yml
@@ -11,7 +11,7 @@ categories:
   - Proteomics
   - Sequence Analysis
 homepage_url: http://artbio.fr
-remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/generate_sliding_windows
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
   - testtoolshed
