--- a/tools/msp_cap3/.shed.yml
+++ b/tools/msp_cap3/.shed.yml
@@ -11,7 +11,7 @@ long_description: |
 categories:
   - Assembly
 homepage_url: http://artbio.fr
-remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/msp_cap3
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
   - testtoolshed
