--- a/packages/package_ged_velvet/.shed.yml
+++ b/packages/package_ged_velvet/.shed.yml
@@ -7,7 +7,7 @@ long_description: |
 categories:
   - Tool Dependency Packages
 homepage_url: http://artbio.fr
-remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/packages/package_ged_velvet
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
   - testtoolshed
