--- a/packages/package_sra_toolkit_2_5_2/.shed.yml
+++ b/packages/package_sra_toolkit_2_5_2/.shed.yml
@@ -7,7 +7,7 @@ long_description: |
 categories:
   - Tool Dependency Packages
 homepage_url: http://artbio.fr
-remote_repository_url: 
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/packages/package_sra_toolkit_2_5_2
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
   - testtoolshed
