--- a/suites/mississippi_toolsuite/.shed.yml
+++ b/suites/mississippi_toolsuite/.shed.yml
@@ -9,7 +9,7 @@ categories:
   - Sequence Analysis
   - Visualization
 homepage_url: http://artbio.fr
-remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/suites/mississippi_toolsuite
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
   - testtoolshed
