--- a/suites/suite_visitor2/.shed.yml
+++ b/suites/suite_visitor2/.shed.yml
@@ -8,7 +8,7 @@ categories:
   - RNA
   - Sequence Analysis
 homepage_url: http://artbio.fr
-remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/suites/suite_visitor2
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
   - testtoolshed
