--- a/tools/annotation_collector/.shed.yml
+++ b/tools/annotation_collector/.shed.yml
@@ -13,7 +13,7 @@ categories:
   - RNA
   - Fasta Manipulation
 homepage_url: http://artbio.fr
-remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/annotation_collector
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
   - testtoolshed
