--- a/tools/blastn_to_scaffold/.shed.yml
+++ b/tools/blastn_to_scaffold/.shed.yml
@@ -14,7 +14,7 @@ categories:
   - Sequence Analysis
   - Assembly
 homepage_url: http://artbio.fr
-remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/blastn_to_scaffold
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
   - testtoolshed
