--- a/tools/deseq1_no_replicate/.shed.yml
+++ b/tools/deseq1_no_replicate/.shed.yml
@@ -7,6 +7,6 @@ long_description: |
 categories:
   - RNA
 homepage_url: http://bioconductor.org/packages/release/bioc/html/DESeq.html
-remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/deseq1_no_replicate
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
