--- a/tools/deseq2/.shed.yml
+++ b/tools/deseq2/.shed.yml
@@ -8,6 +8,6 @@ long_description: |
 categories:
   - RNA
 homepage_url: http://artbio.fr
-remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/deseq2
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
