--- a/tools/mismatch_frequencies/.shed.yml
+++ b/tools/mismatch_frequencies/.shed.yml
@@ -9,7 +9,7 @@ categories:
   - Variant Analysis
   - Sequence Analysis
 homepage_url: http://artbio.fr
-remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/mismatch_frequencies
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
   - testtoolshed
