--- a/tools/msp_blastparser_and_hits/.shed.yml
+++ b/tools/msp_blastparser_and_hits/.shed.yml
@@ -10,7 +10,7 @@ categories:
   - Assembly
   - RNA
 homepage_url: http://artbio.fr
-remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/msp_blastparser_and_hits
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
   - testtoolshed
