--- a/tools/msp_oases/.shed.yml
+++ b/tools/msp_oases/.shed.yml
@@ -8,7 +8,7 @@ categories:
   - Assembly
   - RNA
 homepage_url: http://artbio.fr
-remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/msp_oases
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
   - testtoolshed
