--- a/tools/msp_sr_bowtie/.shed.yml
+++ b/tools/msp_sr_bowtie/.shed.yml
@@ -8,7 +8,7 @@ categories:
   - RNA
   - Next Gen Mappers
 homepage_url: http://artbio.fr
-remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/msp_sr_bowtie
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
   - testtoolshed
