--- a/tools/msp_sr_bowtie_cascade/.shed.yml
+++ b/tools/msp_sr_bowtie_cascade/.shed.yml
@@ -7,7 +7,7 @@ long_description: |
 categories:
   - RNA
 homepage_url: http://artbio.fr
-remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/msp_sr_bowtie_cascade
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
   - testtoolshed
