--- a/tools/msp_sr_size_histograms/.shed.yml
+++ b/tools/msp_sr_size_histograms/.shed.yml
@@ -9,7 +9,7 @@ categories:
   - Graphics
   - Sequence Analysis
 homepage_url: http://artbio.fr
-remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/msp_sr_size_histograms
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
   - testtoolshed
