--- a/tools/sra-tools/.shed.yml
+++ b/tools/sra-tools/.shed.yml
@@ -8,7 +8,7 @@ categories:
   - Data Source
   - Fastq Manipulation
 homepage_url: http://artbio.fr
-remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/sra-tools
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
   - testtoolshed
