--- a/tools/yac_clipper/.shed.yml
+++ b/tools/yac_clipper/.shed.yml
@@ -9,7 +9,7 @@ categories:
   - RNA
   - Fastq Manipulation
 homepage_url: http://artbio.fr
-remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/yac_clipper
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
   - testtoolshed
