--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python: 2.7
 install:
   - pip install click==5.1
+  - pip install --upgrade setuptools
   - pip install planemo
 
 script:
