--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,13 @@ install:
   - . activate iuc_conda
   - planemo --version
   - conda --version
-  - if ! git diff --quiet "$TRAVIS_COMMIT_RANGE" -- ; then TRAVIS_COMMIT_RANGE=master...; fi
+  - git diff --quiet "$TRAVIS_COMMIT_RANGE" -- ; GIT_DIFF_EXIT_CODE=$?
+  - |
+    if [ "$GIT_DIFF_EXIT_CODE" -gt 1 ] ; then
+      git remote set-branches --add origin master;
+      git fetch;
+      TRAVIS_COMMIT_RANGE=origin/master...;
+    fi
   - echo $TRAVIS_COMMIT_RANGE
   - |
       planemo ci_find_repos --exclude_from .tt_blacklist \
@@ -33,8 +39,8 @@ install:
   - cat changed_repositories_chunk.list
 
 script:
-  - cd "$TRAVIS_BUILD_DIR"
-  - while read -r DIR; do planemo shed_lint --tools --ensure_metadata --report_level warn --fail_level error --recursive "$DIR" || exit 1; done < changed_repositories_chunk.list
+  - cd "$TRAVIS_BUILD_DIR" && flake8 --exclude=.git .
+  - while read -r DIR; do planemo shed_lint --tools --ensure_metadata --urls --report_level warn --fail_level error --recursive "$DIR" || exit 1; done < changed_repositories_chunk.list
   - while read -r DIR; do planemo conda_install "$DIR"; done < changed_repositories_chunk.list
   - while read -r DIR; do planemo test --conda_dependency_resolution --galaxy_branch "$GALAXY_RELEASE" --galaxy_source "$GALAXY_REPO" "$DIR" || exit 1; done < changed_repositories_chunk.list
 
