--- a/tools/fisher_test/.shed.yml
+++ b/tools/fisher_test/.shed.yml
@@ -1,13 +1,13 @@
 # .shed.yml supporting automatic pushes.
-owner: mvdbeek
+owner: drosofff
 name: fishertest
-description: Fisher's exact test on two gene hit lists.
+description: Fisher's exact test on two-column hit lists.
 long_description: |
-  Fisher's exact test on two gene hit lists.
+  Fisher's exact test on two-column hit lists.
 categories:
   - RNA
   - Statistics
 homepage_url: http://artbio.fr
 remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/fisher_test
 toolshed:
-  - https://lbcd41.snv.jussieu.fr/toolshed/
+  - toolshed
