--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,8 @@ install:
   - echo $TRAVIS_COMMIT_RANGE
   - |
       planemo ci_find_repos --exclude_from .tt_blacklist \
-							--exclude packages \
+                            --exclude packages 
+                            --exclude packages 
                             --changed_in_commit_range "$TRAVIS_COMMIT_RANGE" \
                             --chunk_count 4 --chunk "${CHUNK}" \
                             --output changed_repositories_chunk.list
