--- a/tools/basicplot/.shed.yml
+++ b/tools/basicplot/.shed.yml
@@ -2,8 +2,8 @@
 owner: chamaelj
 name: basicplot
 description: Graphics
-long_description: Take on tabular file of numerical data as input and produces pairwise plots of numerical data, in log-log scale.|
-  Graphics
+long_description: |
+  Take on tabular file of numerical data as input and produces pairwise plots of numerical data, in log-log scale.
 categories:
   - Graphics
 homepage_url: http://artbio.fr
