--- a/tools/basicplot/.shed.yml
+++ b/tools/basicplot/.shed.yml
@@ -1,5 +1,5 @@
 # .shed.yml supporting automatic pushes.
-owner: chamaelj
+owner: chaimae_eljaouhari
 name: basicplot
 description: Graphics
 long_description: |
