--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   - export PLANEMO_CONDA_PREFIX="$HOME/conda"
 
 install:
-  - pip install flake8 planemo
+  - pip install flake8 planemo==0.39
   - planemo conda_init
   - export PATH="$PLANEMO_CONDA_PREFIX/bin:$PATH"
   - conda create -y -q -c bioconda --name iuc_conda samtools=0.1.19 bcftools
