--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ install:
   - pip install flake8 planemo==0.39
   - planemo conda_init
   - export PATH="$PLANEMO_CONDA_PREFIX/bin:$PATH"
-  - conda create -y -q -c bioconda --name iuc_conda samtools=0.1.19 bcftools
-  - . activate iuc_conda
+#  - conda create -y -q -c bioconda --name iuc_conda samtools=0.1.19 bcftools
+#  - . activate iuc_conda
   - planemo --version
   - conda --version
   - git diff --quiet "$TRAVIS_COMMIT_RANGE" -- ; GIT_DIFF_EXIT_CODE=$?
