test downgrade of planemo==0.40.0 and galaxy release_17.05

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,11 @@ env:
 
 before_install:
   - export GALAXY_REPO=https://github.com/galaxyproject/galaxy
-  - export GALAXY_RELEASE=release_17.01
+  - export GALAXY_RELEASE=release_17.05
   - export PLANEMO_CONDA_PREFIX="$HOME/conda"
 
 install:
-  - pip install flake8 flake8-import-order planemo
+  - pip install flake8 flake8-import-order planemo==0.40.0
   - planemo conda_init
   - export PATH="$PLANEMO_CONDA_PREFIX/bin:$PATH"
 #  - conda create -y -q -c bioconda --name iuc_conda samtools=0.1.19 bcftools
