modify .travis.yml and change repenrich.xml to trigger test

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false
+sudo: required
 language: python
 python: 2.7
 
@@ -15,11 +15,11 @@ before_install:
   - export PLANEMO_CONDA_PREFIX="$HOME/conda"
 
 install:
-  - pip install flake8 flake8-import-order planemo==0.40.0
+  - pip install flake8 flake8-import-order planemo
   - planemo conda_init
   - export PATH="$PLANEMO_CONDA_PREFIX/bin:$PATH"
-#  - conda create -y -q -c bioconda --name iuc_conda samtools=0.1.19 bcftools
-#  - . activate iuc_conda
+  - conda create -y -q -c bioconda --name iuc_conda samtools=0.1.19 bcftools
+  - . activate iuc_conda
   - planemo --version
   - conda --version
   - git diff --quiet "$TRAVIS_COMMIT_RANGE" -- ; GIT_DIFF_EXIT_CODE=$?
