--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: required
+sudo: false
 language: python
 python: 2.7
 
@@ -18,7 +18,7 @@ install:
   - pip install flake8 flake8-import-order planemo
   - planemo conda_init
   - export PATH="$PLANEMO_CONDA_PREFIX/bin:$PATH"
-  - conda create -y -q -c bioconda --name iuc_conda samtools=0.1.19 bcftools
+  - conda create -y -q -c bioconda --name artbio_conda bowtie=1.2.0
   - . activate iuc_conda
   - planemo --version
   - conda --version
