--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,10 @@ sudo: false
 language: python
 python: 2.7
 
-# This is a big repository so break Travis CI work into 4 CI jobs.
+#  break Travis CI work into 2 CI jobs.
 env:
   - CHUNK=0
   - CHUNK=1
-  - CHUNK=2
-  - CHUNK=3
 
 before_install:
   - export GALAXY_REPO=https://github.com/galaxyproject/galaxy
@@ -34,7 +32,7 @@ install:
       planemo ci_find_repos --exclude_from .tt_blacklist \
                             --exclude packages \
                             --changed_in_commit_range "$TRAVIS_COMMIT_RANGE" \
-                            --chunk_count 4 --chunk "${CHUNK}" \
+                            --chunk_count 2 --chunk "${CHUNK}" \
                             --output changed_repositories_chunk.list
   - cat changed_repositories_chunk.list
 
