--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ install:
   - pip install planemo # flake8 flake8-import-order
   - planemo conda_init
   - export PATH="$PLANEMO_CONDA_PREFIX/bin:$PATH"
+  - conda create -y -q -c bioconda --name artbio_conda samtools=1.4.1 bcftools
+  - . activate artbio_conda
   - planemo --version
   - conda --version
   - git diff --quiet "$TRAVIS_COMMIT_RANGE" -- ; GIT_DIFF_EXIT_CODE=$?
