--- a/tools/mircounts/tool_data_table_conf.xml.sample
+++ b/tools/mircounts/tool_data_table_conf.xml.sample
@@ -2,6 +2,6 @@
     <!-- miRBase GenomeKeys -->
     <table name="miRbase_GenomeKeys" comment_char="#">
         <columns>value, name</columns>
-        <file path="tool-data/mirbase_genomeKeys.loc" />
+        <file path="${__HERE__}/test-data/mirbase_genomeKeys.loc" />
     </table>
 </tables>
