--- a/tools/mircounts/.shed.yml
+++ b/tools/mircounts/.shed.yml
@@ -3,9 +3,9 @@ owner: artbio
 name: mircounts
 description: Generates miRNA count lists from read alignments to mirBase.
 long_description: |
-  Generates pre-miRNA count list from read alignments to pre-miRNA sequences downloaded from mirBase
-  Generetes mature miRNA count list from read alignments to pre-miRNA sequences downloaded from mirBase
-  and alignment parsing using a gff file generated from miRBase data.
+  Generates pre-miRNA and mature miRNA count tables from read alignments to
+  pre-miRNA sequences and a gff file, both downloaded from mirBase. Produces also
+  read coverage plots of pre-miRNAs.
 categories:
   - RNA
   - Transcriptomics
