--- a/deprecated/MirParser/.shed.yml
+++ b/deprecated/MirParser/.shed.yml
@@ -4,6 +4,8 @@ name: mir_parser
 description: Generates miRNA count lists from read alignments guided by mirBase gff files.
 long_description: |
   Generates miRNA count lists from read alignments guided by mirBase gff files.
+  This tool is not supported anymore. See artbio tools mircounts and small_rna_signatures owned by artbio
+  for replacement.
 categories:
   - RNA
   - Transcriptomics
