--- a/tools/fisher_test/.shed.yml
+++ b/tools/fisher_test/.shed.yml
@@ -1,5 +1,5 @@
 # .shed.yml supporting automatic pushes.
-owner: drosofff
+owner: artbio
 name: fishertest
 description: Fisher's exact test on two-column hit lists.
 long_description: |
