move msp_cap3 to cap3 (v 2.0.0) owned by artbio

--- a/tools/cap3/.shed.yml
+++ b/tools/cap3/.shed.yml
@@ -1,6 +1,6 @@
 # .shed.yml supporting automatic pushes.
-owner: drosofff
-name: msp_cap3
+owner: artbio
+name: cap3
 description: cap3 wrapper
 long_description: |
   cap3 wrapper.
