--- a/tools/justdiff/.shed.yml
+++ b/tools/justdiff/.shed.yml
@@ -1,12 +1,12 @@
 # .shed.yml supporting automatic pushes.
 owner: artbio
-name: diff
+name: justdiff
 description: Unix diff
 long_description: |
   Returns the output of the unix diff command between two files.
 categories:
   - Text Manipulation
 homepage_url: http://artbio.fr
-remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/diff
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/justdiff
 toolshed:
   - https://toolshed.g2.bx.psu.edu/
