--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,15 @@ python: 2.7
 env:
   - CHUNK=0
   - CHUNK=1
-
+  - CHUNK=2
+  - CHUNK=3
 before_install:
   - export GALAXY_REPO=https://github.com/galaxyproject/galaxy
   - export GALAXY_RELEASE=release_17.05
   - export PLANEMO_CONDA_PREFIX="$HOME/conda"
 
 install:
-  - pip install planemo # flake8 flake8-import-order
+  - pip install planemo=="0.40.1" # flake8 flake8-import-order
   - planemo conda_init
   - export PATH="$PLANEMO_CONDA_PREFIX/bin:$PATH"
   - conda create -y -q -c bioconda --name artbio_conda samtools=1.4.1 bcftools
