switch/lint to python 3, bump to 1.0.0 and change to artbio owner

--- a/tools/blastx_to_scaffold/.shed.yml
+++ b/tools/blastx_to_scaffold/.shed.yml
@@ -1,5 +1,5 @@
 # .shed.yml supporting automatic pushes.
-owner: drosofff
+owner: artbio
 name: blastx_to_scaffold
 description: Generate DNA scaffold from blastx alignment of Contigs
 long_description: |
