--- a/tools/rsem/tool_data_table_conf.xml.sample
+++ b/tools/rsem/tool_data_table_conf.xml.sample
@@ -2,7 +2,7 @@
     <!-- Locations of all rsem reference files under genome directory -->
     <table name="rsem_indexes" comment_char="#">
         <columns>value, dbkey, name, path</columns>
-        <file path="tool-data/rsem_indices.loc" />
+        <file path="tool-data/rsem_indices.loc.sample" />
     </table>
 </tables>
 
