add further categories to the toolshed repo

--- a/tools/deseq2_normalization/.shed.yml
+++ b/tools/deseq2_normalization/.shed.yml
@@ -6,6 +6,9 @@ long_description: |
   Normalizes gene count lists using DESeq2 estimateSizeFactors() function.
 categories:
   - RNA
+  - Transcriptomics
+  - Sequence Analysis
+  - Statistics
 homepage_url: http://artbio.fr
 remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/deseq2_normalization
 toolshed:
