move linting command in a script apart lint.sh

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,7 @@ jobs:
                                 --changed_in_commit_range "$TRAVIS_COMMIT_RANGE" \
                                 --output changed_repositories.list
         - cat changed_repositories.list
-      script:
-        - set -e
-        - cd "$TRAVIS_BUILD_DIR" && flake8 --exclude=.git,deprecated,helper_scripts,python_modules,unstable .
-        - while read -r DIR; do planemo shed_lint --tools --ensure_metadata --urls --report_level warn --fail_level error --recursive "$DIR"; done < changed_repositories.list
-        - cat changed_repositories.list
+      script: . $TRAVIS_BUILD_DIR/lint.sh
 
     - stage: test
       env: CHUNK=0
