--- a/.travis.yml
+++ b/.travis.yml
@@ -76,7 +76,7 @@ install:
   - pip install planemo
   - planemo conda_init
   - export PATH="$PLANEMO_CONDA_PREFIX/bin:$PATH"
-  - conda install -y conda=4.3.30  # update conda to 4.3.30
+  - conda install -y conda=4.3.34
   - planemo --version
   - conda --version
   - git diff --quiet "$TRAVIS_COMMIT_RANGE" -- ; GIT_DIFF_EXIT_CODE=$?
