--- a/.travis.yml
+++ b/.travis.yml
@@ -6,28 +6,28 @@ python: 2.7
 
 jobs:
   include:
-#    - stage: lint
-#      addons: {}
-#      before_install: skip
-#      install:
-#        - pip install flake8 flake8-import-order planemo
-#        - planemo --version
-#        - git diff --quiet "$TRAVIS_COMMIT_RANGE" -- ; GIT_DIFF_EXIT_CODE=$?
-#        - |
-#          if [ "$GIT_DIFF_EXIT_CODE" -gt 1 ] ; then
-#              git remote set-branches --add origin master
-#              git fetch
-#              TRAVIS_COMMIT_RANGE=origin/master...
-#          fi
-#        - echo $TRAVIS_COMMIT_RANGE
-#        - |
-#          planemo ci_find_repos --exclude_from .tt_blacklist \
-#                                --changed_in_commit_range "$TRAVIS_COMMIT_RANGE" \
-#                                --output changed_repositories.list
-#        - cat changed_repositories.list
-#      script:
-#        - . $TRAVIS_BUILD_DIR/lint.sh
-#        - cat changed_repositories.list
+    - stage: lint
+      addons: {}
+      before_install: skip
+      install:
+        - pip install flake8 flake8-import-order planemo
+        - planemo --version
+        - git diff --quiet "$TRAVIS_COMMIT_RANGE" -- ; GIT_DIFF_EXIT_CODE=$?
+        - |
+          if [ "$GIT_DIFF_EXIT_CODE" -gt 1 ] ; then
+              git remote set-branches --add origin master
+              git fetch
+              TRAVIS_COMMIT_RANGE=origin/master...
+          fi
+        - echo $TRAVIS_COMMIT_RANGE
+        - |
+          planemo ci_find_repos --exclude_from .tt_blacklist \
+                                --changed_in_commit_range "$TRAVIS_COMMIT_RANGE" \
+                                --output changed_repositories.list
+        - cat changed_repositories.list
+      script:
+        - . $TRAVIS_BUILD_DIR/lint.sh
+        - cat changed_repositories.list
      - stage: test
        env: CHUNK=0
      - stage: test
