--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ language: python
 python: 2.7
 cache: pip
 
-
 jobs:
   include:
     - stage: lint
@@ -26,9 +25,7 @@ jobs:
                                 --output changed_repositories.list
         - cat changed_repositories.list
       script:
-        - set -e
-        - cd "$TRAVIS_BUILD_DIR" && flake8 --exclude=.git,deprecated,helper_scripts,python_modules,unstable .
-        - while read -r DIR; do planemo shed_lint --tools --ensure_metadata --urls --report_level warn --fail_level error --recursive "$DIR"; done < changed_repositories.list
+        - . $TRAVIS_BUILD_DIR/lint.sh
         - cat changed_repositories.list
 
     - stage: test
@@ -79,7 +76,7 @@ install:
   - pip install planemo
   - planemo conda_init
   - export PATH="$PLANEMO_CONDA_PREFIX/bin:$PATH"
-  - conda install -y conda=4.3.30  # update conda to 4.3.30
+  - conda install -y conda=4.5.1
   - planemo --version
   - conda --version
   - git diff --quiet "$TRAVIS_COMMIT_RANGE" -- ; GIT_DIFF_EXIT_CODE=$?
@@ -113,12 +110,4 @@ install:
   - cat changed_tools_chunk.list
 
 script:
-  - set -e
-  - |
-    if [ -s changed_tools_chunk.list ]; then
-        planemo test --conda_dependency_resolution --conda_auto_install --conda_channels iuc,bioconda,conda-forge,defaults --galaxy_branch "$GALAXY_RELEASE" --galaxy_source "$GALAXY_REPO" $(cat changed_tools_chunk.list)
-    elif [ -s changed_repositories_chunk.list ]; then
-        while read -r DIR; do
-            planemo test --conda_dependency_resolution --conda_auto_install --conda_channels iuc,bioconda,conda-forge,defaults --galaxy_branch "$GALAXY_RELEASE" --galaxy_source "$GALAXY_REPO" "$DIR"
-        done < changed_repositories_chunk.list
-    fi
+  - . $TRAVIS_BUILD_DIR/planemo_test.sh
