rename repo without - character and bump to 0.2.1

--- a/tools/facturation_ibps/.shed.yml
+++ b/tools/facturation_ibps/.shed.yml
@@ -1,6 +1,6 @@
 # .shed.yml supporting automatic pushes.
 owner: artbio
-name: facturation-ibps
+name: facturation_ibps
 description: IBPS facturation parser
 long_description: |
   IBPS facturation parser
