--- a/tools/filter_single_cell_expression_matrix/.shed.yml
+++ b/tools/filter_single_cell_expression_matrix/.shed.yml
@@ -2,6 +2,8 @@
 owner: artbio
 name: filter_single_cell_expression_matrix
 description: Filter out low quality cells and genes from raw scRNAseq expression matrix 
+long_description: |
+  Filter out low quality cells and genes from raw scRNAseq expression matrix using either scater or Seurat R package.
 categories:
   - Transcriptomics
 homepage_url: http://artbio.fr
