--- a/tools/gsc-mannwhitney_de/.shed.yml
+++ b/tools/gsc-mannwhitney_de/.shed.yml
@@ -1,7 +1,7 @@
 # .shed.yml supporting automatic pushes.
 owner: artbio
 name: gsc-mannwhitney_de
-description: Perform a differential expression analysis between the two groups of a signature score (high/low)
+description: Perform a differential expression analysis between two groups
 long_description:
 categories:
   - Transcriptomics
