--- a/tools/gsc-cpm_tpm_rpk/.shed.yml
+++ b/tools/gsc-cpm_tpm_rpk/.shed.yml
@@ -1,6 +1,6 @@
 # .shed.yml supporting automatic pushes.
 owner: artbio
-name: gsc-cpm_tpm_rpk
+name: gsc_cpm_tpm_rpk
 description: Generate CPM,TPM or RPK from raw counts 
 long_description: |
   Normalizes raw counts expression matrix on different parameters.
