--- a/tools/gsc_correlation/.shed.yml
+++ b/tools/gsc_correlation/.shed.yml
@@ -1,6 +1,6 @@
 # .shed.yml supporting automatic pushes.
 owner: artbio
-name: gsc-correlation
+name: gsc_correlation
 description: Compute single-cell paire-wise gene expressions correlations
 long_description: |
   Compute single-cell paire-wise gene expressions correlations between genes or
@@ -8,6 +8,6 @@ long_description: |
 categories:
   - Transcriptomics
 homepage_url: http://artbio.fr
-remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/gsc-correlation
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/gsc_correlation
 toolshed:
   - toolshed
