clean and update travis tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ jobs:
       addons: {}
       before_install: skip
       install:
-        - pip install flake8 flake8-import-order planemo==0.58.1
+        - pip install flake8 flake8-import-order planemo
         - planemo --version
         - git diff --quiet "$TRAVIS_COMMIT_RANGE" -- ; GIT_DIFF_EXIT_CODE=$?
         - |
@@ -68,12 +68,12 @@ jobs:
 
 before_install:
   - export GALAXY_REPO=https://github.com/galaxyproject/galaxy
-  - export GALAXY_RELEASE=release_18.01
+  - export GALAXY_RELEASE=release_19.05
   - export PLANEMO_CONDA_PREFIX="$HOME/conda"
   - unset JAVA_HOME
 
 install:
-  - pip install planemo==0.58.1
+  - pip install planemo
   - planemo conda_init
   - export PATH="$PLANEMO_CONDA_PREFIX/bin:$PATH"
   - conda install -y conda=4.6.8
@@ -110,4 +110,12 @@ install:
   - cat changed_tools_chunk.list
 
 script:
-  - . $TRAVIS_BUILD_DIR/planemo_test.sh
+  - set -e
+  - |
+    if [ -s changed_tools_chunk.list ]; then
+        planemo test --conda_dependency_resolution --conda_auto_install --conda_channels iuc,conda-forge,bioconda,defaults --galaxy_branch "$GALAXY_RELEASE" --galaxy_source "$GALAXY_REPO" $(cat changed_tools_chunk.list)
+    elif [ -s changed_repositories_chunk.list ]; then
+        while read -r DIR; do
+            planemo test --conda_dependency_resolution --conda_auto_install --conda_channels iuc,conda-forge,bioconda,defaults --galaxy_branch "$GALAXY_RELEASE" --galaxy_source "$GALAXY_REPO" "$DIR"
+        done < changed_repositories_chunk.list
+    fi
