--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ jobs:
           fi
         - echo $TRAVIS_COMMIT_RANGE
         - |
-          planemo ci_find_repos --exclude_from .tt_skip \
+          planemo ci_find_repos --exclude_from .tt_blacklist \
                                 --changed_in_commit_range "$TRAVIS_COMMIT_RANGE" \
                                 --output changed_repositories.list
         - cat changed_repositories.list
