--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ jobs:
       addons: {}
       before_install: skip
       install:
+        - which pip
+        - pip install -U pip
         - pip install flake8 flake8-import-order planemo
         - planemo --version
         - git diff --quiet "$TRAVIS_COMMIT_RANGE" -- ; GIT_DIFF_EXIT_CODE=$?
