test a stupid sudo -i

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ jobs:
       addons: {}
       before_install: skip
       install:
-        - which pip
-        - python -m pip install -U pip
+        - sudo -i
         - pip install flake8 flake8-import-order planemo
         - planemo --version
         - git diff --quiet "$TRAVIS_COMMIT_RANGE" -- ; GIT_DIFF_EXIT_CODE=$?
