--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
-python: 2.7
+python: 3.7
 dist: xenial
 sudo: required
 cache: pip
@@ -10,7 +10,7 @@ jobs:
       addons: {}
       before_install: skip
       install:
-        - pip3 install flake8 flake8-import-order planemo
+        - pip install flake8 flake8-import-order planemo
         - planemo --version
         - git diff --quiet "$TRAVIS_COMMIT_RANGE" -- ; GIT_DIFF_EXIT_CODE=$?
         - |
