--- a/tools/sigmut/.shed.yml
+++ b/tools/sigmut/.shed.yml
@@ -3,9 +3,8 @@ owner: artbio
 name: sigmut
 description: SigMut creates mutational matrices for all types of somatic mutations.
 long_description: |
-  This tool takes a MAF, VCF or table file for analyzing the mutational
-  signatures. This tool currently supports the following genomes:: GRCh38,
-  GRCh37, mm10, mm9 and rn6.
+  This tool takes a MAF, VCF or tabular file and analyses the mutational signatures.
+  It currently employs any of the following genomes:_GRCh38, GRCh37, mm10, mm9 and rn6.
 categories:
   - Sequence analysis
 homepage_url: http://artbio.fr
