--- a/tools/sigmut/.shed.yml
+++ b/tools/sigmut/.shed.yml
@@ -6,7 +6,7 @@ long_description: |
   This tool takes a MAF, VCF or tabular file and analyses the mutational signatures.
   It currently employs any of the following genomes:_GRCh38, GRCh37, mm10, mm9 and rn6.
 categories:
-  - Sequence analysis
+  - Variant Analysis
 homepage_url: http://artbio.fr
 remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/sigmut
 toolshed:
