--- a/tools/artbio_mutect2/.shed.yml
+++ b/tools/artbio_mutect2/.shed.yml
@@ -5,6 +5,11 @@ long_description: |
   MuTect2 is a somatic SNP and indel caller that combines the DREAM 
   challenge-winning somatic genotyping engine of the original MuTect
   with the assembly-based machinery of HaplotypeCaller.
+  This wrapper mirrors the IUC wrapper
+  https://github.com/galaxyproject/tools-iuc/blob/master/tools/gatk4/gatk4_Mutect2.xml.
+  It allows analysing tumour samples with the help of available normal
+  sample data. Appropriate code changes have been made in the original
+  wrapper in order to expose this Mutect2 functionality.
 categories:
   - Variant Analysis
 homepage_url: http://artbio.fr
