add help section and prepare for toolshed

--- a/tools/sambamba/.shed.yml
+++ b/tools/sambamba/.shed.yml
@@ -1,11 +1,11 @@
 owner: artbio
 name: sambamba
-description: downsample BAM/SAM or filter BAM/SAM on flags, fields, tags, and region
+description: filter BAM/SAM on flags, fields, tags, and region, or down-sample BAM/SAM 
 long_description: |
   This tools uses sambaba to downsample BAM/SAM or filter BAM/SAM
   on flags, fields, tags, and region 
 categories:
-  - SAM - Tools for manipulating alignments in the SAM format
+  - SAM
 homepage_url: http://artbio.fr
 remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/sambamba
 toolshed:
